// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductPage renders editing state with no prefills when creationMode is true 1`] = `
<DocumentFragment>
  <div
    class="ProductPageContainer"
  >
    <img
      alt="the product"
      class="ProductImage"
      src="https://fakeimg.pl/400x400?text=No+img"
    />
    <form
      class="ProductDetails"
      id="listingDetailsForm"
    >
      <div>
        category filter
      </div>
      <label
        for="title"
      >
        Product title:
      </label>
      <input
        class="ProductTitle"
        name="title"
        type="text"
        value=""
      />
      <label
        for="price"
      >
        Product price:
      </label>
      <input
        name="price"
        type="number"
        value=""
      />
      <label
        for="image"
      >
        Product price:
      </label>
      <input
        name="image"
        type="url"
        value="https://fakeimg.pl/400x400?text=No+img"
      />
      <label
        for="description"
      >
        Product description:
      </label>
      <textarea
        name="description"
      />
      <button
        class="Button"
        type="submit"
      >
        Save
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ProductPage renders editing state with prefills when the Edit button is clicked 1`] = `
<DocumentFragment>
  <div
    class="ProductPageContainer"
  >
    <img
      alt="the product"
      class="ProductImage"
      src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg"
    />
    <form
      class="ProductDetails"
      id="listingDetailsForm"
    >
      <div>
        category filter
      </div>
      <label
        for="title"
      >
        Product title:
      </label>
      <input
        class="ProductTitle"
        name="title"
        type="text"
        value="Mens Casual Premium Slim Fit T-Shirts "
      />
      <label
        for="price"
      >
        Product price:
      </label>
      <input
        name="price"
        type="number"
        value="22.3"
      />
      <label
        for="image"
      >
        Product price:
      </label>
      <input
        name="image"
        type="url"
        value="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg"
      />
      <label
        for="description"
      >
        Product description:
      </label>
      <textarea
        name="description"
      >
        Slim-fitting style, contrast raglan long sleeve, three-button henley placket, light weight & soft fabric for breathable and comfortable wearing. And Solid stitched shirts with round neck made for durability and a great fit for casual fashion wear and diehard baseball fans. The Henley style round neckline includes a three-button placket.
      </textarea>
      <button
        class="Button"
        type="submit"
      >
        Save
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ProductPage renders loading state when id is provided in the path params but data is not in context 1`] = `
<DocumentFragment>
  <div
    class="ProductPageContainer"
  >
    <span>
      Loading...
    </span>
  </div>
</DocumentFragment>
`;

exports[`ProductPage renders product details correctly when data is in context and id is provided in the path params 1`] = `
<DocumentFragment>
  <div
    class="ProductPageContainer"
  >
    <img
      alt="the product Mens Casual Premium Slim Fit T-Shirts "
      class="ProductImage"
      src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg"
    />
    <div
      class="ProductDetails"
    >
      <a
        class="BackButton"
        href="/"
      >
        &lt; Back to listings
      </a>
      <span
        class="ProductCategory"
      >
        men's clothing
      </span>
      <h1
        class="ProductTitle"
      >
        Mens Casual Premium Slim Fit T-Shirts 
      </h1>
      <span>
        ID: 2
      </span>
      <span>
        £22.3
      </span>
      <p
        class="ProductDescription"
      >
        Slim-fitting style, contrast raglan long sleeve, three-button henley placket, light weight & soft fabric for breathable and comfortable wearing. And Solid stitched shirts with round neck made for durability and a great fit for casual fashion wear and diehard baseball fans. The Henley style round neckline includes a three-button placket.
      </p>
      <button
        class="Button"
      >
        Edit
      </button>
    </div>
  </div>
</DocumentFragment>
`;
